@@ -517,7 +517,7 @@ class WC_Payment_Gateway_WCPay_Process_Payment_Test extends WP_UnitTestCase {
 	public function test_connection_exception_thrown() {
 		// Arrange: Reusable data.
 		$error_message = 'Test error.';
-		$error_notice  = 'There was an error while processing the payment. If you continue to see this notice, please contact the admin.';
+		$error_notice  = 'There was an error while processing this request. If you continue to see this notice, please contact the admin.';
 
 		// Arrange: Create an order to test with.
 		$order = WC_Helper_Order::create_order();
@@ -587,7 +587,7 @@ class WC_Payment_Gateway_WCPay_Process_Payment_Test extends WP_UnitTestCase {
 
 	public function test_bad_request_exception_thrown() {
 		$error_message = 'Test error.';
-		$error_notice  = 'We\'re not able to process this payment. Please refresh the page and try again.';
+		$error_notice  = 'We\'re not able to process this request. Please refresh the page and try again.';
 
 		$order = WC_Helper_Order::create_order();
 
